syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";


option go_package = "github.com/ChokeGuy/simple-bank/pb";

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    User user = 1;
    string sessionID = 2;
    string accessToken = 3;
    string refreshToken = 4;
    google.protobuf.Timestamp accessTokenExpiresAt = 5;
    google.protobuf.Timestamp refreshTokenExpiresAt = 6;
}

