syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/ChokeGuy/simple-bank/pb";

message UpdateUserRequest {
    string userName = 1;
    optional string fullName =2;
    optional string email = 3;
}

message UpdateUserResponse {
    User user = 1;
}

