syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "rpc_get_list_account.proto";

option go_package = "github.com/ChokeGuy/simple-bank/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
      title: "Simple Bank API"
      version: "0.0.1"
      contact: {
        name: "Nguyen Thang"
        url: "https://github.com/ChokeGuy/simple-bank"
        email: "nguyenthang13a32020@gmail.com"
      }
    }
};

service SimpleBank {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){
        option (google.api.http) = {
            post: "/user"
            body: "*"
        };
    };

    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse){
        option (google.api.http) = {
            post: "/auth/login"
            body: "*"
        };
    };

    rpc GetListAccount(ListAccountRequest) returns (ListAccountResponse){
        option (google.api.http) = {
            get: "/accounts"
        };
    };
}