syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ChokeGuy/simple-bank/pb";

message User {
    string userName = 1;
    string fullName =2;
    string email = 3;
    google.protobuf.Timestamp passwordChangedAt = 4;
    google.protobuf.Timestamp createdAt = 5;
}

